--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rxjs": "^6.0.0",
     "save": "^2.3.2",
     "semantic-ui": "^2.3.3",
+    "sweetalert2": "^7.25.6",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
